# ken

./: .gitignore  .llm-context-collector.toml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  rust-toolchain.toml
.claude/: settings.json
.claude/agents/: adr-conformance-auditor.md
.claude/commands/: adr-check.md  new-issue.md
.claude/hooks/: adr-guard.sh  cargo-check.sh  pre-push-check.sh  protected-files-guard.sh
.claude/skills/: README.md
.claude/skills/axum-askama-htmx/: SKILL.md
.claude/skills/mtls-with-rustls/: SKILL.md
.claude/skills/phase-closure-audit/: SKILL.md
.claude/skills/rust-workspace-hygiene/: SKILL.md
.claude/skills/windows-service-patterns/: SKILL.md
.claude/skills/writing-adrs/: SKILL.md
.githooks/: pre-push
.github/: dependabot.yml  labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: issue-adr_proposal.md  issue-bug_report.yml  issue-config.yml  issue-documentation.yml  issue-feature_request.yml
.github/workflows/: ci.yml  kenbot.yml  labels.yml  pages.yml  release.yml  workflow-labels.yml  workflow-pages.yml
crates/ken-agent/: CLAUDE.md  Cargo.toml
crates/ken-agent/installer/: ken-agent.wxs
crates/ken-agent/src/: cli.rs  config.rs  enroll.rs  killswitch.rs  main.rs
crates/ken-agent/src/audit/: mod.rs
crates/ken-agent/src/ipc/: client.rs  mod.rs  server.rs
crates/ken-agent/src/net/: client.rs  mod.rs
crates/ken-agent/src/observer/: bitlocker.rs  defender.rs  event_log.rs  firewall.rs  lifecycle.rs  mod.rs  snapshot.rs  tick.rs  trait_def.rs  windows_update.rs
crates/ken-agent/src/remote_session/: mod.rs
crates/ken-agent/src/service/: lifecycle.rs  mod.rs
crates/ken-agent/src/service/session/: mod.rs  win.rs
crates/ken-agent/src/tray/: app.rs  consent_dialog.rs  enroll_dialog.rs  mod.rs  status_window.rs
crates/ken-agent/src/updater/: mod.rs
crates/ken-agent/src/worker/: commands.rs  main_loop.rs  mod.rs
crates/ken-protocol/: CLAUDE.md  Cargo.toml
crates/ken-protocol/src/: audit.rs  command.rs  enrollment.rs  heartbeat.rs  ids.rs  lib.rs  status.rs  version.rs
crates/ken-protocol/tests/: compatibility.rs  display.rs  roundtrip.rs
crates/ken-server/: CLAUDE.md  Cargo.toml  Dockerfile  docker-compose.example.yml  ken.example.toml
crates/ken-server/migrations/: 0001_initial.sql  0002_admin_auth.sql
crates/ken-server/src/: ca.rs  config.rs  error.rs  lib.rs  main.rs  state.rs
crates/ken-server/src/http/: admin.rs  agent_api.rs  auth.rs  endpoint_id.rs  enrollment.rs  mod.rs  tls.rs
crates/ken-server/src/storage/: mod.rs
crates/ken-server/static/: htmx.min.js  tailwind.css
crates/ken-server/templates/: _endpoint_row.html  _status_badge.html  audit.html  base.html  command_sent.html  commands.html  dashboard.html  endpoint_detail.html  enroll.html  login.html  set_password.html
crates/ken-server/tests/: agent_mtls_bridge.rs  http_api.rs  storage.rs
docs/adr/: 0000-adr-format-and-lifecycle.md  0001-trust-boundaries-and-current-scope.md  0002-use-rust-across-the-workspace.md  0003-embed-rustdesk-crates-in-agent.md  0004-two-listener-tls-architecture.md  0005-sqlite-via-sqlx-for-server-persistence.md  0006-server-rendered-html-stack.md  0007-architect-implementer-role-separation.md  0008-mtls-implementation-via-custom-verifier.md  0009-egui-for-tray-app.md  0010-named-pipe-ipc-between-service-and-tray.md  0011-agent-update-via-signed-msi.md  0012-kill-switch-architecture.md  0013-migrate-admin-ui-rendering-to-askama-templates.md  0014-agpl-3-as-source-availability-floor.md  0015-automated-issue-triage-with-kenbot.md  0016-agent-identity-derives-from-the-client-certificate.md  0017-bridge-the-verified-endpointid-from-rustls-into-request-handlers-via-customacceptor.md  0018-observer-execution-model.md  0019-status-snapshot-observation-semantics.md  0020-windows-update-observer.md  0021-observer-background-refresh-pattern.md  0021-observer-panic-isolation-strategy.md  0022-observer-panic-isolation-strategy.md  0023-clarify-verifiers-call-pattern-and-dualpath-certificate-expiry-check.md  0024-admin-authentication-via-bootstrap-password-and-user-chosen-password.md  0025-self-hosted-arm64-runner-for-server-container-builds.md
docs/architecture/: component-diagram.md  repository-structure.md
docs/maintainer/: ci-path-filtering.md  kenbot-setup.md  oci-runner-setup.md  phase-1-closure-audit.md
docs/user/: audit-log.md  consent.md  install.md
