[package]
name = "ken-agent"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
description = "Ken agent for Windows endpoint observability"
publish = false

[lints]
workspace = true

[dependencies]
ken-protocol = { path = "../ken-protocol" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
toml = { workspace = true }
rustls = { workspace = true }

[target.'cfg(not(windows))'.dependencies]
ctrlc = "3"

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }
windows-service = { workspace = true }

[dev-dependencies]
tempfile = "3"
