[package]
name = "ken-agent"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
description = "Ken agent for Windows endpoint observability"
publish = false

[lints]
workspace = true

[dependencies]
ken-protocol = { path = "../ken-protocol" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
toml = { workspace = true }
rustls = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

[features]
# The tray-app feature enables the GUI dependencies for the tray app
# (ADR-0009). Disabled in CI to avoid headless OpenGL issues. Enabled
# in the release build on Windows.
tray-app = ["dep:eframe", "dep:tray-icon", "dep:image"]

[target.'cfg(not(windows))'.dependencies]
ctrlc = "3"

[target.'cfg(windows)'.dependencies]
windows-service = { workspace = true }
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_Pipes",
    "Win32_System_RemoteDesktop",
    "Win32_System_Services",
    "Win32_System_Threading",
] }
# GUI for the tray app (ADR-0009) — optional, gated behind tray-app feature
eframe = { version = "0.31", default-features = false, features = ["glow", "default_fonts"], optional = true }
tray-icon = { version = "0.19", optional = true }
image = { version = "0.25", default-features = false, features = ["png"], optional = true }

[dev-dependencies]
tempfile = "3"
