[package]
name = "ken-server"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
description = "Ken observability server for family IT"
publish = false

[lints]
workspace = true

[dependencies]
ken-protocol = { path = "../ken-protocol" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
toml = { workspace = true }
rustls = { workspace = true }
rcgen = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
askama = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }
