[package]
name = "ken-server"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
description = "Ken observability server for family IT"
publish = false

[lints]
workspace = true

[dependencies]
ken-protocol = { path = "../ken-protocol" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
toml = { workspace = true }
rustls = { workspace = true }
rcgen = { workspace = true }
axum = { workspace = true }
axum-server = { version = "0.8", features = ["tls-rustls"] }
tokio-rustls = "0.26"
tower = "0.5"
tower-http = { workspace = true }
sqlx = { workspace = true }
askama = { workspace = true }
x509-parser = "0.18"
argon2 = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
